--- a/assets/theplug/scss/sidebar.scss
+++ b/assets/theplug/scss/sidebar.scss
@@ -15,6 +15,7 @@
     left: 0;
     overflow: hidden;
     transform: translateX(-100%);
+    transition: all ease .3s;
     .header {
       height: 50px;
       background: $plug-brand;
@@ -31,9 +32,47 @@
       padding: 0;
       li {
         height: 95px;
-        padding-top: 15px;
         position: relative;
         padding-left: 65px;
+        font-size: 18px;
+        cursor: pointer;
+        &.category {
+          height: 57px !important;
+          padding-bottom: 0;
+          a {
+            padding-top: 10px;
+          }
+          &:before {
+            bottom: 11px;
+          }
+        }
+        &:hover, &.active {
+          background: $gray-light;
+        }
+        span {
+          position: relative;
+          display: block;
+          span {
+            display: -webkit-box;
+            height: 42px;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow-y: hidden;
+            text-overflow: ellipsis;
+            overflow-x: visible;
+          }
+        }
+        i {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          margin: auto;
+          height: 17px;
+          text-align: center;
+          width: 64px;
+          color: $gray-brand;
+          left: -65px;
+        }
         &:before {
           content: attr(data-date);
           position: absolute;
@@ -51,7 +90,8 @@
           text-decoration: none;
           font-weight: 500;
           padding-right: 25px;
-          line-height: 19px;
+          line-height: 21px;
+          padding-top: 15px;
         }
       }
     }
@@ -65,11 +105,24 @@
       padding: 0;
       list-style: none;
       background: $white;
+      margin: 0;
       li {
         float: left;
         width: 33%;
         text-align: center;
         cursor: pointer;
+        height: 100%;
+        font-size: 12px;
+        padding-top: 5px;
+        color: $gray-brand;
+        transition: ease all .3s;
+        &.active {
+          color: $plug-brand;
+        }
+        &:before {
+          display: block;
+          font-size: 30px;
+        }
       }
     }
   }
