--- a/assets/theplug/variables.scss
+++ b/assets/theplug/variables.scss
@@ -2,6 +2,7 @@ $off-white: #eeeeee;
 $white: #fff;
 $plug-brand: #238bd7;
 $gray-brand: #939b9f;
+$gray-light: #f4f4f4;
 $title-black: #3c464c;
 $text-gray: #606c73;
 $primary-border-color: #d6d6d6;
