--- a/site/client/views/site/article/article.html
+++ b/site/client/views/site/article/article.html
@@ -1,17 +1,19 @@
 <template name="article">
+    {{#with article}}
     <div class="main-content-container">
+        <div class="social-container">
+            <i class="ion ion-ios-upload-outline"></i>
+            <i class="ion ion-ios-bookmarks-outline"></i>
+        </div>
         <div class="wrapper">
             <div class="content-container">
-                {{#if article}}
-                    {{#with article}}
-                        <time>Jan 2015</time>
-                        <h1>{{title}}</h1>
-                        {{{content}}}
-                    {{/with}}
-                {{/if}}
+                <time>Jan 2015</time>
+                <h1>{{title}}</h1>
+                {{{content}}}
             </div>
         </div>
     </div>
+    {{/with}}
 </template>
 
 <template name="article-loading">
