--- a/site/client/views/site/sidebar/sidebar.html
+++ b/site/client/views/site/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <template name="sidebar">
     <div class="sidebar">
         <div class="header">
-            Reading List
+            {{> menuicon}}Reading List
         </div>
         <ul class="content-container">
 
