--- a/assets/theplug/scss/article.scss
+++ b/assets/theplug/scss/article.scss
@@ -1,6 +1,27 @@
 .theplug {
   padding-top: 67px;
-  transition: ease width .3s;
+  transition: ease-in-out all .3s;
+  background: rgba(180, 181, 189, 0.06);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  &.menu-open {
+    .main-content-container {
+      .content-container {
+          padding: 45px;
+          margin: 0 auto;
+          position: relative;
+          column-count: 2 !important;
+          column-gap: 30px;
+          width: 100%;
+          z-index: 1;
+      }
+      .ion-navicon {
+        opacity: 0;
+        transition: ease-in-out all .3s;
+      }
+    }
+  }
   .main-content-container {
     width: 90%;
     height: 100%;
@@ -9,6 +30,10 @@
     border: $secondary-border-color solid 1px;
     border-radius: 2px;
     position: relative;
+    transition: width ease-in-out .3s;
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
     &:after {
       content: '';
       background: linear-gradient(rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 15%, rgba(255, 255, 255, 0) 100%);
@@ -17,18 +42,31 @@
       position: absolute;
       width: 100%;
       top: 0px;
+      left: 0;
       pointer-events: none;
+    }
+    .ion-navicon {
+      position: absolute;
+      font-size: 30px;
+      top: -63px;
+      left: 2.5%;
+      color: $plug-brand;
+      cursor: pointer;
+      opacity: 1;
     }
     .social-container {
       position: absolute;
       top: -63px;
-      right: 10px;
+      right: 2.5%;
       font-size: 25px;
       i {
         margin-left: 15px;
         margin-right: 15px;
         color: $plug-brand;
         cursor: pointer;
+        &:last-of-type {
+          margin-right: 0;
+        }
       }
     }
     &:before {
@@ -48,31 +86,75 @@
     .wrapper {
       height: 100%;
       overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      position: relative;
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.37);
+      background: none;
+      #disqus_thread {
+        padding: 0px 15px;
+      }
       .content-container {
-        max-width: 620px;
-        height: 100%;
-        padding: 45px;
+        padding: 45px 30px;
         margin: 0 auto;
+        position: relative;
+        column-count: 3;
+        -webkit-column-rule: solid 2px;
+        column-gap: 45px;
+        width: 100%;
+        z-index: 1;
+        transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+        -webkit-perspective: 1000;
+        img {
+          max-width: 100%;
+          -webkit-filter: grayscale(100%);
+          transition: all ease-in-out .7s;
+          cursor: pointer;
+          margin-bottom: 35px;
+          &:hover {
+            -webkit-filter: grayscale(0%);
+          }
+        }
+        &:after {
+          content: "";
+          background: url(http://subtlepatterns.com/patterns/concrete_seamless.png);
+          position: absolute;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          z-index: -1;
+          opacity: 0.85;
+        }
         time {
-          color: #bcc1c4;
+          color: #899094;
           margin-bottom: 5px;
           display: block;
           font-size: 18px;
         }
-        h1 {
-          font-size: 30px;
-          margin-bottom: 30px;
-          line-height: 38px;
-          color: $title-black;
-          font-family: serif;
-          margin-top: 0;
+        .author {
+          margin-bottom: 15px !important;
+          font-weight: 600;
+          font-size: 17px !important;
         }
-        p {
-          margin-bottom: 35px !important;
-          line-height: 26px;
-          font-size: 18px;
+        h1 {
+          font-size: 28px;
+          margin-bottom: 30px;
+          color: #3c464c;
+          font-family: Quattrocento, serif;
           margin-top: 0;
-          color: $text-color;
+          line-height: 1.1em;
+          border-top: solid 2px;
+          border-bottom: solid 2px;
+          padding: 10px 5px;
+          margin-bottom: 10px;
+        }
+        p, span, ul, li, a {
+          margin-bottom: 35px !important;
+          font-size: 16px !important;
+          margin-top: 0;
+          color: black;
+          line-height: 23px !important;
         }
       }
     }
