--- a/assets/theplug/scss/global.scss
+++ b/assets/theplug/scss/global.scss
@@ -1,9 +1,22 @@
 .theplug, html, body {
   height: 100%;
-  background: $off-white;
-  font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
+  font-family: "Quattrocento Sans", "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
 }
 
+@import url(http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic|Quattrocento:700);
+
+@font-face {
+  font-family: 'canterbury';
+  src: url('/fonts/canterbury-webfont.eot');
+  src: url('/fonts/canterbury-webfont.eot?#iefix') format('embedded-opentype'),
+  url('/fonts/canterbury-webfont.woff2') format('woff2'),
+  url('/fonts/canterbury-webfont.woff') format('woff'),
+  url('/fonts/canterbury-webfont.ttf') format('truetype'),
+  url('/fonts/canterbury-webfont.svg#canterburyregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
 * {
 //  transition: all ease .3s;
 }
