fixed issue #1 - firefox column

--- a/assets/theplug/scss/article.scss
+++ b/assets/theplug/scss/article.scss
@@ -99,6 +99,7 @@
         position: relative;
         column-count: 3;
         -webkit-column-rule: solid 2px;
+        -moz-column-rule: solid 2px;
         column-gap: 45px;
         width: 100%;
         z-index: 1;
